--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
